frontend/css/_base.scss
/* ... */
.revisions-list li + li {
    border-top: 1px solid var(--border-color);
}

.wrap {
    white-space: normal;
    overflow-wrap: anywhere;
}

td {
    border-top: 1px solid var(--border-color);
}

th a,
.link a,
.fleet a {
    display: block;
    margin: -.25em -.5em;
    padding: .25em .5em;
}

.stop-name[rowspan="2"] a {
    padding: 1.25em 0;
}

th,
td {
    border-left: 1px solid var(--border-color);
    padding: .25em .5em;
    text-align: left;

    &:first-child {
        border-left: 0;
        padding-left: 0;

        a {
            margin-left: 0;
            padding-left: 0;
        }
    }

    &:last-child {
        padding-right: 0;

        a {
            margin-right: 0;
            padding-right: 0;
        }
    }
}

thead {
    th {
        padding-top: 0;
        vertical-align: bottom;
    }
}

.table-wrapper {
    margin-left: calc(env(safe-area-inset-left) * -1 - 1em);
    margin-right: calc(env(safe-area-inset-right) * -1 - 1em);
    overflow-x: auto;

    table {
        border-collapse: separate;
        border-spacing: 0;
        padding-left: calc(env(safe-area-inset-left) + 1rem);
        padding-right: calc(env(safe-area-inset-right) + 1rem);
        white-space: nowrap;
    }
}

.nowrap {
    white-space: nowrap;
}

#timetable {
    margin-top: 1em;
}

.timetable-wrapper-wrapper {
    font-size: .875em;
    margin: 1em 0;

    input {
        vertical-align: top;
    }
}

.timetable-wrapper {
    margin-left: -1.14em;
    margin-left: calc(env(safe-area-inset-left) * -1 - 1.14em);
    margin-right: -1.14em;
    margin-right: calc(env(safe-area-inset-right) * -1 - 1.14em);
    margin-top: 1em;
    overflow-x: auto;
    position: relative;

    &--wide {
        margin-left: 0;
    }
}

input:not(:checked) + label {
    + .timetable-wrapper,
    + .route {
        .minor {
            display: none;
        }

        .od,
        .referrer,
        .referrer + .dep {
            display: table-row;
        }
    }
}

.timetable {
    border-collapse: separate;
    border-spacing: 0;
    padding: 0 1.14em;
    padding-left: calc(env(safe-area-inset-left) + 1.14em);
    padding-right: calc(env(safe-area-inset-right) + 1.14em);

    .timetable-wrapper--wide & {
        padding-left: 0;
    }

    .then-every {
        width: 0;
    }

    tbody td {
        border-left: 0;
        font-variant-numeric: tabular-nums;
    }

    td,
    th {
        height: 1.5em;
    }

    tbody tr:first-child {
        td,
        th {
            border-top: 0;
        }
    }

    // highlight stop
    .referrer,
    .referrer + .dep {
        td,
        th {
            background: var(--brand-color);
        }

        .then-every {
            background: none;
        }

        a {
            color: var(--active-link-color);
        }
    }

    thead {
        th { // 'Block'
            border-top: 0;
            border-bottom: 1px solid var(--border-color);
            text-align: right;
            padding-right: .5em;
        }

        td {  // block number / line name
            border: 1px solid var(--border-color);
            border-width: 0 1px 1px 0;
            text-align: center;

            &:last-child { // last cell
                border-right: 0;
            }
        }
    }

    tfoot {
        td {
            border: 1px solid var(--border-color);
            border-width: 1px 1px 0 0;
            vertical-align: top;

            &:last-child {
                border-right: 0;
            }

        }
    }

    .dep,
    .minor + .minor {
        th,
        td {
            border-top: 0;
        }
    }

    .dep {
        td:first-child {
            padding-left: .5em;
        }
    }

    .minor {
        .stop-name {
            padding-left: 1em;

            a {
                margin-left: -1em;
                padding-left: 1em;
            }
        }
    }

    th {
        background: var(--background-color);
        border-right: 1px solid var(--border-color);
        border-top: 1px solid var(--border-color);
        font-weight: normal;
        white-space: nowrap;
    }
}

.timetable-wrapper--wide {
    .stop-name,
    th {
        left: 0;
        overflow: hidden;
        position: sticky;
        max-width: calc(100vw - 14em);
    }
}

.route {
    a {
        margin-left: 1em;
    }

    li:before {
        border: 3px solid var(--border-color);
        border-width: 3px 0 0 3px;
        content: " ";
        display: block;
        position: absolute;
        margin-top: .85em;
        height: 1.75em;
        width: 6px;
    }

    li:last-child:before {
        height: 0;
    }

    .minor {
        a {
            font-size: .875em;
            margin-left: 2em;
        }

        &:before {
            border-top-width: 1px;
            width: 1em;
        }
    }
}

.operator-map,
.journey-map {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
}

.trip-map {
    top: 0;
    position: sticky;
    margin: 0 -1em;
    height: 50vh;
}

.journey-map.has-sidebar {
    bottom: 30%;
}

.journey-map + .map-sidebar {
    position: absolute;
    top: 70%;
    left: 0;
    right: 0;
    bottom: -90px;
    overflow: auto;
    padding: 1em 1em 90px;
}

.map-sidebar .navigation {
    overflow: hidden;
}
/* ... */

